# Mesh-Simplify

./: CMakeLists.txt  README.md  main.cpp
data/: .mlp
src/: CMakeLists.txt  Edge.h  Face.cpp  Face.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Vector.cpp  Vector.h  WaffleLink.h
